Fix [UI] Filters row broken in small resolutions (#2338)

--- a/src/common/TabsSlider/tabsSlider.scss
+++ b/src/common/TabsSlider/tabsSlider.scss
@@ -19,7 +19,8 @@
   &__tab {
     display: inline-flex;
     align-items: center;
-    padding: 5px 24px;
+    padding: 5px;
+    margin: 0 15px 0 0;
     color: $topaz;
     font-weight: 700;
     font-size: 18px;
